kubernetes/kyverno-policies.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-image-signature
  annotations:
    policies.kyverno.io/title: Require Image Signature
    policies.kyverno.io/category: Software Supply Chain Security
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Ensures that only images signed by Cosign can be deployed to the cluster.
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: check-image
      match:
        resources:
          kinds:
            - Pod
      verifyImages:
      - imageReferences:
        - "ghcr.io/qamarbajwa/gaas-*"
        attestors:
        - entries:
          - keys:
              publicKeys: |-
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEX1...
                -----END PUBLIC KEY-----
